[v8r8p4]
use DIRAC v6r17p23

* substitute != with is not
* Fix different bugs in EverythingElse template

[v8r8p3]
use DIRAC v6r17p23

* fix scripts
* RAWIntegrity: perform the removal by bulk

[v8r8p2]
use DIRAC v6r17p22

ˇ* remove the qtweb and use the default browser insteed
* add all platforms to the documentation
* correct the document format
* Move the check on SystemConfig at for loop level
* Fix the RecoStripping template to cope with more than one step
* avoiding spam emails
* fix for stupid formats of output directories
* visibility flag must be not used during the step modification
* Update tests according to the new compression level specification
* Set defaults for compression level in templates

[v8r8p1]
use DIRAC v6r17p21

* Fix extra curry brace in recoOutputVisFlag

[v8r8]
use DIRAC v6r17p21

* adding the Output Files Visibility
* add stepid to the primary key and correct the tests
* add the file types to the tests
* add ; as separator
* allow to change the number of printed LFNs fix check when SEs are specified
* use the filetypeid insetad of the name
* user jobs with inputs to all T1s
* fix error check
* just added some imports
* added script to test interaction with DIRAC environment
* Fix the visibility flag dictionary for MC template - avoid too many try except
* fileid is used instead of filetype
* Fix variable in RecoStripping template
* added script to test interaction with DIRAC environment
* fix logging when no RAW or Buffer replication is required
* New plugin ReplicateToRunDestination
* fix getBKAncestors
* add jsonc
* change qt in Qt
* use Accessible metadata
* fix returned value for addFilesToTransformation in fake client
* fix
* if one SE given replicate with ancestors to that SE
* add activity information
* better output
* allow individual files to be used for trigger rate
* change the lcgBundle
* change name for json file
* change the lcgBundle
* allow to change the step for a given production
* event type has to be number