@@ -1,3 +1,9 @@
+[v8r8p5]
+use DIRAC v6r17p24
+
+* Link the documentation
+* Document data distribution
+
 [v8r8p4]
 use DIRAC v6r17p23
 
